<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etUsuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:hint="@string/usuario"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        app:startIconContentDescription="@string/content_description_end_icon"
        app:startIconDrawable="@drawable/ic_outline_person_outline_24">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/etSenha"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/senha"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="@id/etUsuario"
        app:layout_constraintStart_toStartOf="@id/etUsuario"
        app:layout_constraintTop_toBottomOf="@id/etUsuario"
        app:startIconContentDescription="@string/vpn"
        app:startIconDrawable="@drawable/ic_outline_vpn_key_24">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"

            />

    </com.google.android.material.textfield.TextInputLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@id/etUsuario"
        app:layout_constraintEnd_toEndOf="@id/etUsuario"
        app:layout_constraintStart_toStartOf="@id/etUsuario"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1"
        app:srcCompat="@mipmap/banner2"
        tools:layout_editor_absoluteX="500dp"
        tools:layout_editor_absoluteY="300dp" />

    <Button
        android:id="@+id/btEntrar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#7E7A7A"
        android:text="@string/entrar"
        android:textColor="#FBF6F6"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etSenha"
        app:layout_constraintVertical_bias="0.4" />


    <TextView
        android:id="@+id/txRedefinir"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/esqueceu_a_senha_clique_aqui"
        android:textColor="#B51616"
        app:layout_constraintTop_toBottomOf="@id/etSenha"
        app:layout_constraintEnd_toEndOf="@id/etSenha"

        />

    <Button
        android:id="@+id/btCadastro"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/criar_conta"
        android:textColor="#C10E0E"
        android:padding="8dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>